--- a/Develop/DoWonHyang/99.Common/style.css
+++ b/Develop/DoWonHyang/99.Common/style.css
@@ -1,4 +1,14 @@
 /*
+    작성일자: 2020.06.16
+    작성자: Dowonhyang
+    설명: border-box 테두리 까지 사이즈로 포함
+    수정자내역:
+*/
+* {
+    box-sizing : border-box;
+    margin: 0;
+}
+/*
     작성일자: 2020.06.10
     작성자: Dowonhyang
     설명: flaot 시 부모 태그의 레이아웃 깨짐을 해결하기 위한 코드 (float를 사용한 부모태그에 사용)
